--- a/src/global.less
+++ b/src/global.less
@@ -22,6 +22,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+}
 .globalSpin {
   width: 100%;
   margin: 40px 0 !important;
