--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -33,6 +33,7 @@
     .ant-form-item-control-wrapper {
       height: 100%;
       flex: 0 1 auto;
+      width: 100%;
     }
     .ant-form-item-control {
       height: 100%;
@@ -46,6 +47,8 @@
     }
     .ant-input-number {
       width: 100%;
+      height: 100%;
+      line-height: 40px;
     }
     .ant-input {
       padding: 10px;
@@ -53,6 +56,10 @@
     input.ant-input {
       // padding: 10px;
       line-height: 20px;
+      height: 100%;
+    }
+    input.ant-input-number-input {
+      line-height: 20px; // padding: 10px;
       height: 100%;
     }
     textarea.ant-input {
