--- a/src/utils/utils.less
+++ b/src/utils/utils.less
@@ -1,3 +1,24 @@
+@error-color: #d9333f;
+.error-text() {
+  font-size: 12px;
+  color: #d9333f;
+}
+
+.form-title-text() {
+  font-size: 14px;
+  color: #333;
+}
+
+.form-content-text() {
+  font-size: 14px;
+  color: #666;
+}
+
+.form-placeholder-text() {
+  font-size: 14px;
+  color: #999;
+}
+
 .textOverflow() {
   overflow: hidden;
   text-overflow: ellipsis;
