--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -1,3 +1,4 @@
+@import '../../utils/utils.less';
 .form_item {
   height: 75px;
   padding-top: 10px;
@@ -5,8 +6,10 @@
   padding-right: 20px;
   width: 300px;
   min-width: 300px;
-  background: yellow;
   position: absolute;
+  background: pink;
+  display: flex;
+  flex-direction: column;
   :global {
     .ant-form-explain {
       height: 20px;
@@ -40,6 +43,7 @@
       display: flex;
       flex-direction: column;
       padding-bottom: 20px;
+      line-height: normal;
     }
     .ant-form-item-children {
       // flex-grow: 1;
@@ -67,4 +71,29 @@
       height: 100%;
     }
   }
+}
+
+.item {
+  display: flex;
+  background: #fff;
+  flex-grow: 1;
+  .aside {
+    width: 120px;
+    height: 40px;
+    line-height: 40px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    text-align: right;
+    .form-title-text();
+  }
+  .right {
+    flex-grow: 1;
+  }
+}
+
+.error {
+  margin-left: 120px;
+  height: 20px;
+  line-height: 20px;
+  .error-text();
 }
