--- a/src/components/Form/SelectItem/index.less
+++ b/src/components/Form/SelectItem/index.less
@@ -1,5 +1,5 @@
 @import '../../../utils/utils.less';
-.inteface {
+.select {
   :global {
     .ant-form-item-control {
       line-height: 40px;
@@ -18,14 +18,12 @@
   }
 }
 
-.mutiinteface {
+.mutiselect {
   :global {
     .ant-select-selection--multiple {
       min-height: 40px;
     }
     .ant-select {
-      line-height: 40px;
-      height: 40px;
       width: 100%;
     }
     .ant-select-selection--multiple .ant-select-selection__rendered > ul > li {
