--- a/src/components/Form/TextItem/index.less
+++ b/src/components/Form/TextItem/index.less
@@ -9,7 +9,7 @@
       outline: none;
     }
     .ant-input-number {
-      border: #d9333f;
+      border: 1px solid #d9333f;
     }
     .ant-input-number.ant-input-number-focused {
       border: none;
