--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -11,11 +11,29 @@
       padding-bottom: 0;
     }
     .ant-select-selection__rendered {
-      height: 39px;
-      line-height: 39px;
+      height: 40px;
+      line-height: 40px;
     }
     .ant-input-group {
       top: 0 !important;
     }
+    textarea.ant-input {
+      flex-grow: 1;
+    }
   }
+}
+
+.errorMsg {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 4px;
+  border: 1px solid #d9333f;
+}
+
+.noerror {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 4px;
 }
