--- a/src/components/Form/UploadItem/index.less
+++ b/src/components/Form/UploadItem/index.less
@@ -1,6 +1,12 @@
+@import '../../../utils/utils.less';
+
 .file {
   height: auto;
   min-height: 150px;
+}
+
+.errorMsg {
+  border: 1px solid @error-color;
 }
 
 .upfile {
