--- a/src/components/Form/DateItem/index.less
+++ b/src/components/Form/DateItem/index.less
@@ -1,7 +1,21 @@
+@import '../../../utils/utils.less';
 .date {
   :global {
     .ant-calendar-picker {
       width: 100% !important;
     }
+    .ant-time-picker {
+      width: 100% !important;
+    }
+    .input.ant-calendar-picker-input {
+      height: 38px !important;
+    }
+    input.ant-time-picker-input {
+      height: 38px !important;
+    }
   }
+}
+
+.time_popup {
+  margin-top: -3px;
 }
