--- a/src/components/Form/TextItem/index.less
+++ b/src/components/Form/TextItem/index.less
@@ -3,13 +3,13 @@
   height: 100%;
   :global {
     .ant-input {
-      border: 1px solid #d9333f;
+      // border: 1px solid #d9333f;
     }
     input.ant-input:focus {
       outline: none;
     }
     .ant-input-number {
-      border: 1px solid #d9333f;
+      // border: 1px solid transparent;
     }
     .ant-input-number.ant-input-number-focused {
       border: none;
