--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 4px;
-  border: 1px solid #d9333f;
+  // border: 1px solid #d9333f;
 }
 
 .noerror {
