--- a/src/components/Form/SelectItem/index.less
+++ b/src/components/Form/SelectItem/index.less
@@ -36,7 +36,7 @@
 .errorMsg {
   :global {
     .ant-select-selection {
-      border-color: @error-color;
+      // border-color: @error-color;
     }
   }
 }
