--- a/src/components/Form/InterfaceItem/index.less
+++ b/src/components/Form/InterfaceItem/index.less
@@ -2,11 +2,11 @@
 .inteface {
   :global {
     .ant-form-item-control {
-      line-height: 40px;
+      line-height: 38px;
     }
     .ant-select {
-      line-height: 40px;
-      height: 40px;
+      line-height: 38px;
+      height: 38px;
       width: 100%;
     }
     .ant-select-selection {
@@ -21,11 +21,10 @@
 .mutiinteface {
   :global {
     .ant-select-selection--multiple {
-      min-height: 40px;
+      min-height: 38px;
     }
     .ant-select {
-      line-height: 40px;
-      height: 40px;
+      line-height: 38px;
       width: 100%;
     }
     .ant-select-selection--multiple .ant-select-selection__rendered > ul > li {
@@ -37,8 +36,16 @@
 
 .errorMsg {
   :global {
+    .ant-select {
+      border-color: #fff;
+      outline: none;
+    }
     .ant-select-selection {
-      border-color: @error-color;
+      border-color: #fff;
+      outline: none;
+    }
+    .ant-select-open .ant-select-selection {
+      box-shadow: 0 0 8px @error-color;
     }
   }
 }
