--- a/src/components/Form/SelectItem/index.less
+++ b/src/components/Form/SelectItem/index.less
@@ -2,11 +2,11 @@
 .select {
   :global {
     .ant-form-item-control {
-      line-height: 40px;
+      line-height: 38px;
     }
     .ant-select {
-      line-height: 40px;
-      height: 40px;
+      line-height: 38px;
+      height: 38px;
       width: 100%;
     }
     .ant-select-selection {
@@ -21,7 +21,7 @@
 .mutiselect {
   :global {
     .ant-select-selection--multiple {
-      min-height: 40px;
+      min-height: 38px;
     }
     .ant-select {
       width: 100%;
@@ -35,8 +35,21 @@
 
 .errorMsg {
   :global {
-    .ant-select-selection {
-      // border-color: @error-color;
+    .ant-select {
+      border-color: #fff;
+      outline: none;
+    }
+    .ant-select-selection:hover {
+      border-color: #fff;
+      box-shadow: 0 0 8px @error-color;
+    }
+    .ant-select-selection:focus {
+      border-color: #fff;
+      box-shadow: 0 0 8px @error-color;
+    }
+    .ant-select-open .ant-select-selection {
+      border-color: #fff;
+      box-shadow: 0 0 8px @error-color;
     }
   }
 }
