--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -26,6 +26,9 @@
       height: 100%;
       white-space: normal;
     }
+    .ant-calendar-picker-input.ant-input {
+      height: 38px;
+    }
     .ant-form-item {
       width: 100%;
       height: 100%;
@@ -52,7 +55,7 @@
     .ant-input-number {
       width: 100%;
       height: 100%;
-      line-height: 40px;
+      line-height: 38px;
     }
     .ant-input {
       padding: 10px;
