--- a/src/components/TagGroup/index.less
+++ b/src/components/TagGroup/index.less
@@ -22,6 +22,7 @@
     color: #ccc;
     background: #f5f5f5;
     border: 1px solid #d9d9d9;
+    padding-right: 5px;
   }
   span {
     position: absolute;
