--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -6,7 +6,7 @@
   padding-right: 20px;
   width: 300px;
   min-width: 300px;
-  position: absolute;
+  // position: absolute;
   background: pink;
   display: flex;
   flex-direction: column;
