--- a/src/utils/utils.less
+++ b/src/utils/utils.less
@@ -7,6 +7,7 @@
 .form-title-text() {
   font-size: 14px;
   color: #333;
+  font-weight: medium;
 }
 
 .form-content-text() {
@@ -17,6 +18,12 @@
 .form-placeholder-text() {
   font-size: 14px;
   color: #999;
+}
+
+.grid-title-text() {
+  font-size: 14px;
+  color: #333;
+  font-weight: medium;
 }
 
 .textOverflow() {
