--- a/src/pages/Flows/index.less
+++ b/src/pages/Flows/index.less
@@ -1,43 +1,66 @@
 @import '../../utils/utils.less';
-.edit_form {
-  // position: relative;
-}
-
-.grid_name {
-  height: 40px;
-  line-height: 40px;
-  .grid-title-text();
-}
-
-.grid_content {
-  padding: 25px 0 10px;
-  border-bottom: 1px solid #ccc;
-  &:first-child {
-    border-top: 1px solid #ccc;
+.title {
+  font-size: 20px;
+  color: #333;
+  margin: 20px 22px;
+  line-height: 26px;
+  height: 26px;
+  > div {
+    margin-left: 22px;
   }
-  > span {
-    width: 25px;
-    height: 25px;
-    background: url('/delete.png') no-repeat center center;
-    background-size: 16px 16px;
-    top: 8px;
-    right: 20px;
-    float: right;
-    margin-top: -20px;
+  span {
+    float: left;
+    width: 12px;
+    height: 12px;
+    margin-top: 7px;
+    background: -webkit-linear-gradient(left, #190f6b, #1890ff);
+    background: -o-linear-gradient(right, #3023ae, #1890ff);
+    background: -moz-linear-gradient(right, #3023ae, #1890ff);
+    background: linear-gradient(to right, #3023ae, #1890ff);
+    background: linear-gradient(to right, #3023ae, #1890ff);
   }
 }
 
-.grid_add {
-  height: 75px;
-  padding-top: 10px;
-  text-align: center;
-  .btn {
-    margin: 0 auto;
-    width: 150px;
-    height: 40px;
-    border: 1px solid #ccc;
-    line-height: 40px;
-    background: url('/add.png') no-repeat center center;
-    background-size: 16px;
+.content {
+  .clearfix();
+}
+
+.content_item {
+  float: left;
+  width: 280px;
+  height: 80px;
+  margin-right: 20px;
+  margin-bottom: 40px;
+  img {
+    width: 80px;
+    height: 80px;
+    float: left;
+    background: #fff;
   }
+  .detail {
+    width: 200px;
+    height: 80px;
+    margin-left: 80px;
+    padding: 18px 12px;
+    box-shadow: 0 0 9px rgba(0, 0, 0, 0.1);
+    .name {
+      font-size: 18px;
+      color: #333;
+      line-height: 24px;
+      height: 24px;
+    }
+    .des {
+      font-size: 12px;
+      margin-top: 2px;
+      color: #999;
+      line-height: 20px;
+      height: 20px;
+      width: 176px;
+      .textOverflow();
+    }
+  }
+}
+
+.clear {
+  clear: both;
 }
