--- a/src/pages/Flows/index.less
+++ b/src/pages/Flows/index.less
@@ -64,3 +64,22 @@
 .clear {
   clear: both;
 }
+
+.flow_title {
+  font-size: 24px;
+  line-height: 30px;
+  height: 30px;
+  color: #333;
+}
+
+.flow_des {
+  font-size: 14px;
+  line-height: 20px;
+  height: 20px;
+  color: #999;
+  margin-left: 20px;
+}
+
+.clearfix {
+  .clearfix();
+}
