--- a/src/components/Form/DateItem/index.less
+++ b/src/components/Form/DateItem/index.less
@@ -38,7 +38,7 @@
     }
     .ant-time-picker-input {
       border: 0;
-      box-shadow: 0 0 8px @error-color;
+      // box-shadow: 0 0 8px @error-color;
     }
     .ant-time-picker-input:hover {
       border: 0;
