--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -91,6 +91,7 @@
   .right {
     flex-grow: 1;
     border-radius: 4px;
+    min-width: 180px;
     border: 1px solid transparent;
     &.has_error {
       border-color: @error-color;
