--- a/src/components/SelectStaff/StaffModal/index.less
+++ b/src/components/SelectStaff/StaffModal/index.less
@@ -172,11 +172,11 @@
   }
   .filter {
     padding-left: 18px;
-    background: url('/filter.png') no-repeat left center;
+    background: url('/unfilter.png') no-repeat left center;
     background-size: 16px;
     margin-left: 20px;
     &.active {
-      background: url('/filter.png') no-repeat left center;
+      background: url('/unfilter.png') no-repeat left center;
       background-size: 16px;
     }
   }
