--- a/src/components/SelectStaff/StaffModal/index.less
+++ b/src/components/SelectStaff/StaffModal/index.less
@@ -176,7 +176,7 @@
     background-size: 16px;
     margin-left: 20px;
     &.active {
-      background: url('/unfilter.png') no-repeat left center;
+      background: url('/filter.png') no-repeat left center;
       background-size: 16px;
     }
   }
