--- a/src/components/SelectStaff/StaffModal/index.less
+++ b/src/components/SelectStaff/StaffModal/index.less
@@ -166,15 +166,15 @@
     font-size: 12px;
     line-height: 20px;
     height: 20px;
+    margin-left: 20px;
   }
   .checkall {
-    padding-left: 18px;
+    padding: 0 6px;
   }
   .filter {
     padding-left: 18px;
     background: url('/unfilter.png') no-repeat left center;
     background-size: 16px;
-    margin-left: 20px;
     &.active {
       background: url('/filter.png') no-repeat left center;
       background-size: 16px;
