--- a/src/components/Form/DepItem/index.less
+++ b/src/components/Form/DepItem/index.less
@@ -43,6 +43,10 @@
       height: 32px;
       line-height: 32px;
     }
+    .ant-select-selection--multiple > ul > li {
+      height: 30px !important;
+      line-height: 30px !important;
+    }
   }
 }
 
