--- a/src/pages/Flows/index.less
+++ b/src/pages/Flows/index.less
@@ -83,3 +83,22 @@
 .clearfix {
   .clearfix();
 }
+
+.step2 {
+  .step2_item {
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+  }
+  :global {
+    .ant-form-item-label {
+      padding-top: 10px;
+      width: 90px;
+    }
+    .aside {
+      width: 90px;
+    }
+    .ant-form-item-control-wrapper {
+      width: 600px;
+    }
+  }
+}
