--- a/src/components/SelectStaff/StaffModal/index.less
+++ b/src/components/SelectStaff/StaffModal/index.less
@@ -326,6 +326,8 @@
     font-size: 14px;
     line-height: 20px;
     color: #1890ff;
+    width: 220px;
+    .textOverflow();
     > span {
       color: #666;
       font-size: 12px;
