--- a/src/components/Form/EditForm/index.less
+++ b/src/components/Form/EditForm/index.less
@@ -1,7 +1,4 @@
 @import '../../../utils/utils.less';
-.edit_form {
-  // position: relative;
-}
 
 .grid_name {
   height: 40px;
@@ -11,7 +8,8 @@
 
 .grid_content {
   padding: 25px 0 10px;
-  border-bottom: 1px solid #ccc;
+  border: 1px solid #ccc;
+  border-top: none;
   &:first-child {
     border-top: 1px solid #ccc;
   }
@@ -20,10 +18,9 @@
     height: 25px;
     background: url('/delete.png') no-repeat center center;
     background-size: 16px 16px;
-    top: 8px;
-    right: 20px;
     float: right;
     margin-top: -20px;
+    margin-right: 10px;
   }
 }
 
@@ -31,6 +28,7 @@
   height: 75px;
   padding-top: 10px;
   text-align: center;
+  border: 1px solid #ccc;
   .btn {
     margin: 0 auto;
     width: 150px;
