--- a/src/components/FileUpload/index.less
+++ b/src/components/FileUpload/index.less
@@ -1,5 +1,8 @@
 .upload {
   :global {
+    .ant-upload-select-picture-card {
+      background: #fff;
+    }
     .ant-upload-select-picture-card .ant_upload_text {
       margin-top: 10px;
       color: #666;
