--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -11,14 +11,17 @@
       padding-bottom: 0;
     }
     .ant-select-selection__rendered {
-      height: 38px;
-      line-height: 38px;
+      height: 36px;
+      line-height: 36px;
     }
     .ant-input-group {
       top: 0 !important;
     }
     textarea.ant-input {
       flex-grow: 1;
+    }
+    textarea {
+      border-top: 0;
     }
   }
 }
@@ -27,8 +30,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  border-radius: 4px;
-  // border: 1px solid #d9333f;
+  border-radius: 4px; // border: 1px solid #d9333f;
 }
 
 .noerror {
