--- a/src/components/Form/TextItem/index.less
+++ b/src/components/Form/TextItem/index.less
@@ -6,18 +6,18 @@
       outline: none;
       border: 0;
     }
-    input.ant-input:focus {
-      box-shadow: 0 0 8px @error-color;
-    }
-    .ant-input-number {
-      border: 0;
-    }
-    .ant-input-number.ant-input-number-focused {
-      box-shadow: 0 0 8px @error-color;
-    }
-    textarea.ant-input:focus {
-      box-shadow: 0 0 8px @error-color;
-    }
+    // input.ant-input:focus {
+    //   box-shadow: 0 0 4px @error-color;
+    // }
+    // .ant-input-number {
+    //   border: 0;
+    // }
+    // .ant-input-number.ant-input-number-focused {
+    //   box-shadow: 0 0 4px @error-color;
+    // }
+    // textarea.ant-input:focus {
+    //   box-shadow: 0 0 4px @error-color;
+    // }
   }
 }
 
