样式，单选搜索

--- a/src/components/Form/ShopSelectItem/index.less
+++ b/src/components/Form/ShopSelectItem/index.less
@@ -1,6 +1,12 @@
 @import '../../../utils/utils.less';
 .select {
   :global {
+    .ant-select-selection__clear {
+      right: 1px;
+      width: 38px;
+      height: 38px;
+      top: 1px;
+    }
     .ant-form-item-control {
       line-height: 38px;
     }
