--- a/src/components/Form/SelectItem/index.less
+++ b/src/components/Form/SelectItem/index.less
@@ -4,6 +4,9 @@
     .ant-form-item-control {
       line-height: 38px;
     }
+    .ant-select-arrow {
+      display: none;
+    }
     .ant-select {
       line-height: 38px;
       height: 38px;
@@ -36,20 +39,20 @@
 .errorMsg {
   :global {
     .ant-select {
-      border-color: #fff;
-      outline: none;
+      // border-color: #fff;
+      // outline: none;
     }
     .ant-select-selection:hover {
-      border-color: #fff;
-      box-shadow: 0 0 8px @error-color;
+      // border-color: #fff;
+      // box-shadow: 0 0 8px @error-color;
     }
     .ant-select-selection:focus {
-      border-color: #fff;
-      box-shadow: 0 0 8px @error-color;
+      // border-color: #fff;
+      // box-shadow: 0 0 8px @error-color;
     }
     .ant-select-open .ant-select-selection {
-      border-color: #fff;
-      box-shadow: 0 0 8px @error-color;
+      // border-color: #fff;
+      // box-shadow: 0 0 8px @error-color;
     }
   }
 }
