--- a/src/components/SelectShop/index.less
+++ b/src/components/SelectShop/index.less
@@ -1,8 +1,40 @@
 .result {
   min-height: 40px;
   border: 1px solid #d9d9d9;
-  padding-left: 3px;
-  // padding-bottom: 3px;
+  padding-left: 3px; // padding-bottom: 3px;
+}
+
+.single_search {
+  margin-right: 38px;
+  :global {
+    .ant-select-selection--single {
+      height: 36px;
+      background: none !important;
+      .ant-select-selection__clear {
+        right: 0;
+      }
+    }
+    .ant-select-auto-complete.ant-select .ant-select-selection__rendered {
+      line-height: 36px;
+    }
+    .ant-select-auto-complete.ant-select .ant-input {
+      height: 36px;
+      line-height: 36px;
+    }
+    .ant-select-combobox .ant-select-search__field {
+      border: none;
+    }
+  }
+}
+
+.search_icon {
+  border: 1px solid #d9d9d9;
+  border-left: none;
+  float: right;
+  width: 38px;
+  height: 38px;
+  background: url('/search.png') no-repeat center center;
+  background-size: 16px 16px;
 }
 
 .tagItem {
