--- a/src/components/SelectShop/ShopModal/ExtraFilters/index.less
+++ b/src/components/SelectShop/ShopModal/ExtraFilters/index.less
@@ -5,11 +5,11 @@
       overflow-y: auto;
       width: 168px;
     }
-    .ant-tree::-webkit-scrollbar {
-      width: 4px;
-      height: 4px;
-      background-color: #1890ff;
-    }
+    // .ant-tree::-webkit-scrollbar {
+    //   width: 4px;
+    //   height: 4px;
+    //   background-color: #1890ff;
+    // }
   }
 }
 
