--- a/src/components/SelectShop/ShopModal/index.less
+++ b/src/components/SelectShop/ShopModal/index.less
@@ -297,11 +297,11 @@
   overflow: auto;
 }
 
-.checked_list::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
-  background-color: #1890ff;
-}
+// .checked_list::-webkit-scrollbar {
+//   width: 4px;
+//   height: 4px;
+//   background-color: #1890ff;
+// }
 
 .delete {
   width: 20px;
@@ -402,8 +402,8 @@
   max-height: 320px !important;
 }
 
-.dropdown::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
-  background-color: #1890ff;
-}
+// .dropdown::-webkit-scrollbar {
+//   width: 4px;
+//   height: 4px;
+//   background-color: #1890ff;
+// }
