--- a/src/global.less
+++ b/src/global.less
@@ -25,6 +25,7 @@ body {
 * {
   box-sizing: border-box;
 }
+
 .globalSpin {
   width: 100%;
   margin: 40px 0 !important;
@@ -33,4 +34,13 @@ body {
 ul,
 ol {
   list-style: none;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1890ff;
 }
