--- a/src/components/SelectStaff/StaffModal/index.less
+++ b/src/components/SelectStaff/StaffModal/index.less
@@ -295,11 +295,11 @@
   overflow: auto;
 }
 
-.checked_list::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
-  background-color: #1890ff;
-}
+// .checked_list::-webkit-scrollbar {
+//   width: 4px;
+//   height: 4px;
+//   background-color: #1890ff;
+// }
 
 .delete {
   width: 20px;
@@ -400,8 +400,8 @@
   max-height: 320px !important;
 }
 
-.dropdown::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
-  background-color: #1890ff;
-}
+// .dropdown::-webkit-scrollbar {
+//   width: 4px;
+//   height: 4px;
+//   background-color: #1890ff;
+// }
