--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -1,3 +1,5 @@
+// eslint-disable length-zero-no-unit
+
 @import '~antd/lib/style/themes/default.less';
 @pro-header-hover-bg: rgba(0, 0, 0, 0.025);
 .header {
@@ -56,7 +58,7 @@ i.trigger {
     display: inline-block;
     transition: all 0.3s;
     height: 100%;
-    >i {
+    > i {
       vertical-align: middle;
       color: @text-color;
     }
@@ -75,7 +77,7 @@ i.trigger {
   }
   .account {
     .avatar {
-      margin: 20px 8px 20px 0;
+      margin: 26px 8px 20px 0;
       color: @primary-color;
       background: rgba(255, 255, 255, 0.85);
       vertical-align: top;
@@ -90,7 +92,7 @@ i.trigger {
   height: 64px;
   .action {
     color: rgba(255, 255, 255, 0.85);
-    >i {
+    > i {
       color: rgba(255, 255, 255, 0.85);
     }
     &:hover,
