--- a/src/components/SelectShop/index.less
+++ b/src/components/SelectShop/index.less
@@ -14,6 +14,9 @@
         right: 0;
       }
     }
+    .ant-select-selection.ant-select-selection--single {
+      padding-right: 0 !important;
+    }
     .ant-select-auto-complete.ant-select .ant-select-selection__rendered {
       line-height: 36px;
     }
