--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -17,6 +17,13 @@
       flex-shrink: 0;
       flex-grow: 0;
     }
+    .ant-select.ant-select-enabled {
+      height: 100%;
+    }
+    .ant-select-selection--multiple {
+      // padding-bottom: 0;
+      height: 100%;
+    }
     .ant-form-item-label {
       width: 120px !important;
       line-height: 20px;
@@ -89,7 +96,7 @@
   }
   .right {
     flex-grow: 1;
-    min-width: 170px;
+    min-width: 160px;
     border: 1px solid transparent;
     :global {
       .ant-select-selection.ant-select-selection--single {
