--- a/src/components/SelectShop/index.less
+++ b/src/components/SelectShop/index.less
@@ -1,4 +1,5 @@
 .result {
+  height: 100%;
   min-height: 40px;
   border: 1px solid #d9d9d9;
   padding-left: 3px; // padding-bottom: 3px;
@@ -46,6 +47,7 @@
 }
 
 .tag_container {
+  height: 100%;
   :global {
     .ant-tag {
       height: 32px;
