--- a/src/components/SelectStaff/index.less
+++ b/src/components/SelectStaff/index.less
@@ -1,5 +1,6 @@
 .result {
   min-height: 40px;
+  height: 100%;
   border: 1px solid #d9d9d9;
   padding-left: 3px; // padding-bottom: 3px;
 }
@@ -63,6 +64,7 @@
 }
 
 .tag_container {
+  height: 100%;
   :global {
     .ant-tag {
       height: 32px;
