--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -29,10 +29,14 @@
     margin-right: 8px;
   }
   :global(.ant-dropdown-menu-item) {
-    width: 160px;
-    height: 60px;
-    line-height: 60px;
+    width: 200px;
+    // height: 60px;
+    line-height: 50px;
     text-align: center;
+  }
+  :global(.ant-dropdown-menu-item:hover) {
+    background: #1890ff;
+    color: #fff;
   }
 }
 
@@ -82,9 +86,9 @@ i.trigger {
       background: rgba(255, 255, 255, 0.85);
       vertical-align: top;
     }
-    &:hover {
-      box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
-    }
+    // &:hover {
+    //   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
+    // }
   }
 }
 
