--- a/src/components/GlobalFooter/index.less
+++ b/src/components/GlobalFooter/index.less
@@ -1,8 +1,9 @@
 @import '~antd/lib/style/themes/default.less';
-
+@font-size-base: 12px;
+@text-color-secondary: rgba(0, 0, 0, 0.3);
 .globalFooter {
   padding: 0 16px;
-  margin: 48px 0 24px 0;
+  margin: 20px 0;
   text-align: center;
 
   .links {
