--- a/src/components/SelectShop/ShopModal/ExtraFilters/index.less
+++ b/src/components/SelectShop/ShopModal/ExtraFilters/index.less
@@ -1,4 +1,6 @@
 .filter_content {
+  padding: 0 16px;
+
   :global {
     .ant-tree {
       max-height: 277px;
@@ -14,7 +16,9 @@
 }
 
 .clear_filter {
-  height: 20px;
+  height: 32px;
+  padding-bottom: 12px;
+  border-bottom: 1px solid #ccc;
   span {
     float: right;
     height: 20px;
@@ -22,7 +26,7 @@
     color: #666;
     font-size: 12px;
     padding-left: 15px;
-    margin-right: 6px;
+    margin-right: 16px;
     cursor: pointer;
     background: url(/clear.png) no-repeat left center;
     background-size: 12px;
