--- a/src/components/SelectShop/ShopModal/index.less
+++ b/src/components/SelectShop/ShopModal/index.less
@@ -189,6 +189,11 @@
     height: 20px;
     margin-left: 20px;
     cursor: pointer;
+    :global {
+      .ant-popover-inner-content {
+        padding: 12px 0;
+      }
+    }
   }
   .checkall {
     padding: 0 6px;
@@ -283,6 +288,7 @@
   width: 200px;
   color: #666;
   margin-top: 2px;
+  font-size: 12px;
   .textOverflow();
 }
 
