--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -23,6 +23,9 @@
     .ant-select-selection--multiple {
       // padding-bottom: 0;
       height: 100%;
+      .ant-select-selection__clear {
+        display: none;
+      }
     }
     .ant-form-item-label {
       width: 120px !important;
