--- a/src/components/SelectShop/index.less
+++ b/src/components/SelectShop/index.less
@@ -3,6 +3,9 @@
   min-height: 40px;
   border: 1px solid #d9d9d9;
   padding-left: 3px; // padding-bottom: 3px;
+  &:hover {
+    border: 1px solid @primary-color;
+  }
 }
 
 .single_search {
