--- a/src/components/SelectStaff/index.less
+++ b/src/components/SelectStaff/index.less
@@ -1,8 +1,12 @@
+@import '../../utils/utils.less';
 .result {
   min-height: 40px;
   height: 100%;
   border: 1px solid #d9d9d9;
   padding-left: 3px; // padding-bottom: 3px;
+  &:hover {
+    border: 1px solid @primary-color;
+  }
 }
 
 .single_result {
