--- a/src/components/Form/UploadItem/index.less
+++ b/src/components/Form/UploadItem/index.less
@@ -25,18 +25,25 @@
     }
     .ant-upload-list-picture-card {
       float: none;
-    } // .ant-upload.ant-upload-select.ant-upload-select-picture-card{
-    //   margin-bottom: 10px;
-    //   margin-top: 10px;
-    // }
-    // .ant-upload.ant-upload-select.ant-upload-select-picture-card:first-child{
-    //   margin-top: 0;
-    // }
-    // .ant-upload.ant-upload-select.ant-upload-select-picture-card:not(first-child) {
-    //   margin-top: 10px;
-    // }
-    // .ant-upload.ant-upload-select.ant-upload-select-picture-card:last-child {
-    //   margin-bottom: 0px;
-    // }
+    }
+  }
+}
+.filelist {
+  :global {
+    .ant-upload.ant-upload-select-picture-card {
+      height: 70px;
+      width: 70px;
+      margin-right: 10px;
+      margin-bottom: 10px;
+    }
+    .ant-upload-list-picture-card .ant-upload-list-item {
+      height: 70px;
+      width: 70px;
+      margin-right: 10px;
+      margin-bottom: 10px;
+    }
+    .ant-upload-list-picture-card {
+      float: none;
+    }
   }
 }
