--- a/src/components/Form/detail.less
+++ b/src/components/Form/detail.less
@@ -1,10 +1,11 @@
 @import '../../utils/utils.less';
 .form_item {
   padding-right: 20px;
-  width: 300px;
+  // width: 300px;
   min-width: 300px;
+  max-width: 900px;
   display: flex;
-  min-height: 55px;
+  min-height: 50px;
   flex-direction: column;
   // padding-bottom: 15px;
 }
@@ -25,7 +26,7 @@
   .right {
     flex-grow: 1;
     min-width: 170px;
-    padding: 9px 0;
+    padding: 10px 0;
     line-height: 22px;
     color: #666;
     font-size: 14px;
