--- a/src/components/Form/detail.less
+++ b/src/components/Form/detail.less
@@ -7,7 +7,7 @@
   display: flex;
   min-height: 50px;
   flex-direction: column;
-  // padding-bottom: 15px;
+  padding-bottom: 10px;
 }
 
 .item {
@@ -25,9 +25,9 @@
   }
   .right {
     flex-grow: 1;
-    min-width: 170px;
+    min-width: 160px;
     padding: 10px 0;
-    line-height: 22px;
+    line-height: 20px;
     color: #666;
     font-size: 14px;
   }
