--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -16,6 +16,12 @@
     }
     .ant-input-group {
       top: 0 !important;
+      flex-shrink: 0;
+      height: 38px;
+      display: flex;
+      > div {
+        flex-grow: 1;
+      }
     }
     textarea.ant-input {
       flex-grow: 1;
