--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -17,6 +17,9 @@
       flex-shrink: 0;
       flex-grow: 0;
     }
+    .ant-select-disabled {
+      background-color: #f5f5f5;
+    }
     .ant-select.ant-select-enabled {
       height: 100%;
     }
