--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -29,6 +29,11 @@
     textarea {
       border-top: 0;
     }
+    .ant-select-selection,
+    .ant-select-selection:focus {
+      box-shadow: none;
+      border-color: #ccc !important;
+    }
   }
 }
 
