--- a/src/components/Form/DateItem/index.less
+++ b/src/components/Form/DateItem/index.less
@@ -1,6 +1,15 @@
 @import '../../../utils/utils.less';
 .date {
   :global {
+    .ant-calendar-picker:hover .ant-calendar-picker-input:not(.ant-input-disabled) {
+      border-color: transparent;
+    }
+    .ant-time-picker-input {
+      border-color: transparent;
+    }
+    .ant-input {
+      border-color: transparent;
+    }
     .ant-calendar-picker {
       width: 100% !important;
     }
