--- a/src/components/Form/ShopSelectItem/index.less
+++ b/src/components/Form/ShopSelectItem/index.less
@@ -17,9 +17,10 @@
     }
     .ant-select-selection {
       height: 100%;
+      border-color: transparent;
     }
     .ant-select-selection__rendered {
-      line-height: inherit;
+      line-height: 36px;
     }
   }
 }
@@ -32,6 +33,9 @@
     }
     .ant-select {
       width: 100%;
+    }
+    .ant-select-selection {
+      border-color: transparent;
     }
     .ant-select-selection--multiple .ant-select-selection__rendered > ul > li {
       height: 30px;
