--- a/src/components/Form/TextItem/index.less
+++ b/src/components/Form/TextItem/index.less
@@ -20,7 +20,22 @@
     // }
   }
 }
-
+:global {
+  .ant-input-number {
+    border-color: transparent;
+  }
+  .ant-input {
+    border-color: transparent;
+  }
+}
 .noerror {
   height: 100%;
+  :global {
+    .ant-input-number {
+      border-color: transparent;
+    }
+    .ant-input {
+      border-color: transparent;
+    }
+  }
 }
