--- a/src/components/UploadCropper/index.less
+++ b/src/components/UploadCropper/index.less
@@ -14,6 +14,12 @@
 }
 .upload {
   :global {
+    .ant-modal-close-x {
+      width: 36px;
+      height: 36px;
+      color: #000;
+      line-height: 36px;
+    }
     .ant-upload-select-picture-card {
       background: #fff;
     }
