--- a/src/components/Form/DepItem/index.less
+++ b/src/components/Form/DepItem/index.less
@@ -13,6 +13,7 @@
     .ant-select-selection__placeholder {
       margin-top: -6px;
     }
+
     .ant-form-item-control {
       line-height: 38px;
     }
@@ -22,13 +23,15 @@
       width: 100%;
     }
     .ant-select-selection {
+      border-color: transparent;
       height: 100%;
     }
     .ant-select-selection--single {
       height: 38px;
     }
+
     .ant-select-selection__rendered {
-      line-height: 38px;
+      line-height: 36px;
     }
   }
 }
@@ -39,8 +42,12 @@
     .ant-select-selection--multiple {
       min-height: 38px;
     }
+
     .ant-select-selection__placeholder {
       margin-top: -6px;
+    }
+    .ant-select-selection {
+      border-color: transparent;
     }
     .ant-select {
       width: 100%;
