--- a/src/components/Form/InterfaceItem/index.less
+++ b/src/components/Form/InterfaceItem/index.less
@@ -4,6 +4,7 @@
     .ant-form-item-control {
       line-height: 38px;
     }
+
     .ant-select {
       line-height: 38px;
       height: 38px;
@@ -11,9 +12,10 @@
     }
     .ant-select-selection {
       height: 100%;
+      border-color: transparent;
     }
     .ant-select-selection__rendered {
-      line-height: inherit;
+      line-height: 36px;
     }
   }
 }
@@ -21,6 +23,9 @@
 .mutiinteface {
   height: 100%;
   :global {
+    .ant-select-selection {
+      border-color: transparent;
+    }
     .ant-select-selection--multiple {
       min-height: 38px;
     }
