--- a/src/components/Form/SelectItem/index.less
+++ b/src/components/Form/SelectItem/index.less
@@ -14,9 +14,10 @@
     }
     .ant-select-selection {
       height: 100%;
+      border-color: transparent;
     }
     .ant-select-selection__rendered {
-      line-height: inherit;
+      line-height: 36px;
     }
   }
 }
@@ -26,8 +27,14 @@
     .ant-select-selection--multiple {
       min-height: 38px;
     }
+    .ant-select-selection {
+      border-color: transparent;
+    }
     .ant-select {
       width: 100%;
+    }
+    .ant-select-selection__rendered {
+      line-height: 36px;
     }
     .ant-select-selection--multiple .ant-select-selection__rendered > ul > li {
       height: 30px;
