--- a/src/components/SelectShop/index.less
+++ b/src/components/SelectShop/index.less
@@ -1,11 +1,11 @@
 .result {
   height: 100%;
-  min-height: 40px;
-  border: 1px solid #d9d9d9;
+  // min-height: 40px;
+  // border: 1px solid #d9d9d9;
   padding-left: 3px; // padding-bottom: 3px;
-  &:hover {
-    border: 1px solid @primary-color;
-  }
+  // &:hover {
+  //   border: 1px solid @primary-color;
+  // }
 }
 
 .single_search {
@@ -35,8 +35,8 @@
 }
 
 .search_icon {
-  border: 1px solid #d9d9d9;
-  border-left: none;
+  border: 1px solid transparent;
+  border-left: 1px solid #d9d9d9;
   float: right;
   width: 38px;
   height: 38px;
