--- a/src/components/SelectStaff/index.less
+++ b/src/components/SelectStaff/index.less
@@ -1,12 +1,9 @@
 @import '../../utils/utils.less';
 .result {
-  min-height: 40px;
+  // min-height: 40px;
   height: 100%;
-  border: 1px solid #d9d9d9;
+  // border: 1px solid #d9d9d9;
   padding-left: 3px; // padding-bottom: 3px;
-  &:hover {
-    border: 1px solid @primary-color;
-  }
 }
 
 .single_result {
@@ -53,8 +50,8 @@
 }
 
 .search_icon {
-  border: 1px solid #d9d9d9;
-  border-left: none;
+  border: 1px solid transparent;
+  border-left: 1px solid #d9d9d9;
   float: right;
   width: 38px;
   height: 38px;
