--- a/src/components/Form/UploadItem/index.less
+++ b/src/components/Form/UploadItem/index.less
@@ -30,15 +30,20 @@
 }
 .filelist {
   :global {
+    .ant-upload-list-picture .ant-upload-list-item,
+    .ant-upload-list-picture-card .ant-upload-list-item {
+      padding: 0;
+      border: none;
+    }
     .ant-upload.ant-upload-select-picture-card {
-      height: 70px;
-      width: 70px;
+      height: 60px;
+      width: 60px;
       margin-right: 10px;
       margin-bottom: 10px;
     }
     .ant-upload-list-picture-card .ant-upload-list-item {
-      height: 70px;
-      width: 70px;
+      height: 60px;
+      width: 60px;
       margin-right: 10px;
       margin-bottom: 10px;
     }
