--- a/src/utils/utils.less
+++ b/src/utils/utils.less
@@ -7,7 +7,7 @@
 
 .form-title-text() {
   font-size: 14px;
-  color: #333;
+  color: #000;
   font-weight: medium;
 }
 
@@ -23,8 +23,8 @@
 
 .grid-title-text() {
   font-size: 14px;
-  color: #333;
-  font-weight: medium;
+  color: #000;
+  font-weight: bold;
 }
 
 .textOverflow() {
