--- a/src/components/SelectStaff/index.less
+++ b/src/components/SelectStaff/index.less
@@ -34,8 +34,8 @@
       line-height: 36px;
     }
     .ant-select-auto-complete.ant-select .ant-input {
-      height: 36px;
-      line-height: 36px;
+      height: 38px;
+      line-height: 38px;
     }
     .ant-select-combobox .ant-select-search__field {
       border: none;
@@ -62,6 +62,11 @@
 .tagItem {
   padding-top: 3px;
   display: inline-block;
+  :global {
+    .ant-tag {
+      color: @text-color;
+    }
+  }
 }
 
 .tag_container {
