--- a/src/components/UploadCropper/index.less
+++ b/src/components/UploadCropper/index.less
@@ -12,6 +12,7 @@
   margin-top: 10px;
   color: #666;
 }
+
 .upload {
   :global {
     .ant-modal-close-x {
@@ -45,6 +46,10 @@
   :global {
     .anticon.anticon-delete {
       display: none;
+    }
+    .ant-upload-select-picture-card {
+      background: #fbfbfb;
+      cursor: not-allowed;
     }
   }
 }
