--- a/src/components/Form/SelectStaffItem/index.less
+++ b/src/components/Form/SelectStaffItem/index.less
@@ -20,7 +20,7 @@
 }
 
 .mutiselect {
-  height: 100%;
+  // height: 100%;
   :global {
     .ant-select-selection--multiple {
       min-height: 38px;
