--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -1,6 +1,7 @@
 @import '../../utils/utils.less';
+
 .form_item {
-  height: 75px;
+  min-height: 75px;
   padding-top: 10px;
   padding-bottom: 5px;
   padding-right: 20px;
@@ -14,6 +15,13 @@
     }
   }
   :global {
+    .ant-select-disabled .ant-select-selection--multiple .ant-select-selection__choice {
+      color: #666;
+      border-radius: 0;
+    }
+    .ant-select-disabled .ant-select-selection:hover {
+      border-color: transparent;
+    }
     .ant-form-explain {
       height: 20px;
       line-height: 18px;
@@ -26,7 +34,8 @@
       color: #fff;
     }
     .ant-select-disabled {
-      background-color: #f5f5f5;
+      background-color: @disable-bg-color;
+      height: 100%;
     }
     .ant-select.ant-select-enabled {
       height: 100%;
