--- a/src/global.less
+++ b/src/global.less
@@ -44,3 +44,6 @@ ol {
 ::-webkit-scrollbar-thumb {
   background-color: #1890ff;
 }
+::-webkit-scrollbar-track {
+  // background-color: rgba(0,0,0,0);
+}
