--- a/src/components/UploadCropper/index.less
+++ b/src/components/UploadCropper/index.less
@@ -44,7 +44,7 @@
 
 .disabled {
   :global {
-    .anticon.anticon-delete {
+    .anticon-delete {
       display: none;
     }
     .ant-upload-select-picture-card {
