--- a/src/pages/Flows/index.less
+++ b/src/pages/Flows/index.less
@@ -44,6 +44,7 @@
     height: 80px;
     margin-left: 80px;
     padding: 18px 12px;
+    cursor: pointer;
     .name {
       font-size: 18px;
       color: #333;
