--- a/src/components/UploadCropper/index.less
+++ b/src/components/UploadCropper/index.less
@@ -48,7 +48,7 @@
       display: none;
     }
     .ant-upload-select-picture-card {
-      background: #fbfbfb;
+      background: #f0f0f0;
       cursor: not-allowed;
     }
   }
