--- a/src/utils/utils.less
+++ b/src/utils/utils.less
@@ -1,7 +1,7 @@
 @error-color: #d9333f;
 @primary-color: #1890ff;
 @text-color: #666;
-@disable-bg-color: #fbfbfb;
+@disable-bg-color: #f0f0f0;
 .error-text() {
   font-size: 12px;
   color: #d9333f;
