--- a/src/components/TagGroup/index.less
+++ b/src/components/TagGroup/index.less
@@ -24,7 +24,7 @@
   position: relative;
   text-align: center;
   &.readonly {
-    color: #ccc;
+    // color: #ccc;
     background: #f5f5f5;
     border: 1px solid #d9d9d9;
     padding-right: 5px;
