--- a/src/utils/utils.less
+++ b/src/utils/utils.less
@@ -4,7 +4,7 @@
 @disable-bg-color: #f0f0f0;
 .error-text() {
   font-size: 12px;
-  color: #d9333f;
+  color: @error-color;
 }
 
 .form-title-text() {
