--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -1,6 +1,9 @@
 @import '../../../utils/utils.less';
 .address {
   :global {
+    .ant-select-disabled .ant-select-selection:hover {
+      border-color: #d9d9d9;
+    }
     .ant-select-selection {
       height: 38px;
     }
